--- a/views/lexicon/tabs/tooltips_v2.html.twig
+++ b/views/lexicon/tabs/tooltips_v2.html.twig
@@ -2,6 +2,12 @@
 
 {% block tab_content %}
 
+    <span
+            class="badge"
+            data-tippy-content="Hey, this is a tooltip"
+        >123</span>
+        <br /><br /><br />
+
     <div class="u-margin-bottom--large">
         <h2 class="heading">Button with tooltip</h2>
 
