Refactor signin UI

--- a/emails/templates/detail.html
+++ b/emails/templates/detail.html
@@ -44,7 +44,7 @@ a.btn-primary {
                     <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px;">
                         <td class="branding-block" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; vertical-align: top; color: #fff; padding: 10px; background-color: #2f3770; border-color: #2f3770;">
                             <a href="http://jadu.continuum/jadu" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; color: #2f3770; text-decoration: underline;">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/161352/logo-cms-white.png" width="30" height="30" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; max-width: 100%;" />
+                                <img src="../../images/branding/jadu-central-logomark.png" width="30" height="30" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; max-width: 100%;" />
                             </a>
                         </td>
                     </tr>
@@ -80,7 +80,7 @@ a.btn-primary {
                         </tr>
                         <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px;">
                             <td class="aligncenter content-block" style="margin: 0; box-sizing: border-box; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; vertical-align: top; text-align: center; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all; word-break: break-word; padding: 0 0 20px; font-size: 12px; color: #999;"><a href="http://jadu.net/continuum" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; text-decoration: underline; font-size: 12px; color: #999;">
-                                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/161352/jadu-continuum-brandmark.png" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; max-width: 100%;" />
+                                <img src="../../images/branding/jadu-central-wordmark-oneline.png" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; max-width: 100%;" />
                             </a></td>
                         </tr>
                     </table>
