--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -46,7 +46,7 @@ $signin-panel-mobile-width:	300px;
 		width: 200px;
 
 		@include respond-min(540px) {
-			filter: drop-shadow(0 0 10px rgb(0 0 0 / 1));
+			filter: drop-shadow(0 0 10px #000);
 		}
 	}
 }
