Switch panel arrangement to match CMX

--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -8,8 +8,6 @@
 	<a class="hide" href="#signin">Skip to Content</a>
 <div class="flash-container js-flash-container"></div>
 
-<div class="signin-backdrop">
-
 	<div class="signin-container">
 
 		<div class="signin signin--recapt t-signin-bg">
@@ -94,6 +92,16 @@
 					<a class="signin__link" href="#signin" tabindex="-1" disabled="disabled">Cancel</a>
 				</form>
 
+				<form id="forgot-username" class="signin__panel signin-forgot" aria-hidden="true">
+					<div class="signin__icon t-signin-icon"></div>
+
+					<span class="signin__info" role="alert" aria-atomic="true">If you’ve forgotten your username you will need to contact your webmaster, or your organisation’s&nbsp;IT&nbsp;support.</span>
+
+					<div class="signin__actions">
+						<a href="#signin" class="btn btn--primary" tabindex="-1" disabled="disabled">Go Back</a>
+					</div>
+				</form>
+
 				<form class="signin__panel signin-twostep" aria-hidden="true" name="twostep">
 					<div class="signin__icon t-signin-icon"></div>
 
@@ -138,23 +146,13 @@
 					</div>
 				</form>
 
-				<form id="forgot-username" class="signin__panel signin-forgot" aria-hidden="true">
-					<div class="signin__icon t-signin-icon"></div>
-
-					<span class="signin__info" role="alert" aria-atomic="true">If you’ve forgotten your username you will need to contact your webmaster, or your organisation’s&nbsp;IT&nbsp;support.</span>
-
-					<div class="signin__actions">
-						<a href="#signin" class="btn btn--primary" tabindex="-1" disabled="disabled">Go Back</a>
-					</div>
-				</form>
-
 				<div class="signin__panel signin-success">
 					<div class="signin__icon t-signin-icon"></div>
 				</div>
 			
 			</div>
 		</div>
-	</div>
+	<div class="signin-backdrop"></div>
 	<h1 class="signin-brand"><img src="../../../../images/branding/jadu-central-wordmark-oneline.svg" alt="Jadu Central" /></h1>
 	<span class="signin-credits">Photo by <a href="https://unsplash.com/@garybpt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Gary Butterfield</a> on <a href="https://unsplash.com/s/photos/leeds-university?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span>
 </div>
