Remove background colour from info panel

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -262,10 +262,8 @@ $signin-panel-mobile-width:	300px;
 }
 
 .signin__info {
-	background-color: #d5d5d5;
 	display: block;
-	margin: 0 0 1em;
-	padding: 1em;
+	margin: 1em 0;
 }
 
 .signin__link {
