--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -1,5 +1,5 @@
 .panel {
-    background-color: color(gray, lighter);
+    background-color: color(gray, lightest);
     border-radius: $border-radius;
     margin: $line-height-base 0;
     position: relative;
@@ -69,6 +69,10 @@
             opacity: .5;
         }
     }
+}
+
+.panel--outline {
+    border: 1px solid color(grey, light);
 }
 
 .panel--scroll .panel__body {
