Fix incorrect classname for icon-times-rectangle

--- a/stylesheets/_component.icons.scss
+++ b/stylesheets/_component.icons.scss
@@ -208,7 +208,7 @@
 .icon-star-empty::before                { content: '\f005'; font-weight: 400; } // star
 .icon-star-half-empty::before           { content: '\f5c0'; } // star-half-alt
 .icon-ticket::before                    { content: '\f3ff'; } // ticket
-.icon-times-rectangle::before           { contene: '\f410' } // rectangle-xmark
+.icon-times-rectangle::before           { content: '\f410' } // rectangle-xmark
 .icon-tablet::before                    { content: '\f3fa'; } // tablet-alt
 .icon-thumbs-down-alt::before           { content: '\f165'; font-weight: 400; } // thumbs-down
 .icon-thumbs-up-alt::before             { content: '\f164'; font-weight: 400; } // thumbs-up
