--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -187,7 +187,7 @@
     &::after {
         color: color(gray, lightest);
         content: '\f061';
-        font-family: 'Font Awesome 5 Free';
+        font-family: $font-family-icons;
         font-weight: 900;
         font-size: $font-size-large;
         left: 0;
@@ -228,7 +228,7 @@
     &::after {
         color: color(gray, lightest);
         content: '\f061';
-        font-family: 'Font Awesome 5 Free';
+        font-family: $font-family-icons;
         font-weight: 900;
         font-size: 19px;
         left: 0;
@@ -406,7 +406,7 @@ td.table__form .rules + .form__group:last-of-type {
         &::after {
             color: color(gray, lightest);
             content: '\f061';
-            font-family: 'Font Awesome 5 Free';
+            font-family: $font-family-icons;
             font-weight: 900;
             font-size: 19px;
             left: 0;
