Replace colour used in legacy link colours

--- a/stylesheets/_deprecated.styles.scss
+++ b/stylesheets/_deprecated.styles.scss
@@ -105,7 +105,7 @@ $accent-color:                  color(jadu-blue);
 $accent-color-alt:              color(white);
 
 $text-color:                    color(text);
-$link-color:                    color(jadu-blue);
+$link-color:                    color(jadu-purple);
 $link-hover-color:              darken($blue, 20%);
 $inverse-link-color:            $white;
 $inverse-link-hover-color:      darken($white, 10%);
