Add parentTitle variable to Pulsar base layout

--- a/views/lexicon/patterns/settings-panel/index.html.twig
+++ b/views/lexicon/patterns/settings-panel/index.html.twig
@@ -1,6 +1,7 @@
 {% extends '@pulsar/lexicon/base.html.twig' %}
 
-{% set heading = 'Ref 5431 - Blue Badge Application Form' %}
+{% set parentTitle = 'parentTitle' %}
+{% set heading = 'heading' %}
 
 {% set tab_one %}
     {% include '/lexicon/patterns/settings-panel/tab.html.twig' %}
