--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -123,6 +123,10 @@
 
                 {{ nav.breadcrumbs(breadcrumbs|default) }}
 
+                {% if parentTitle is defined and parentTitle is not empty %}
+                    <span class="main-title">{{ parentTitle }}</span>
+                {% endif %}
+
                 {% set _ribbon = '' %}
                 {% set _ribbon = block('ribbon') %}
 
