--- a/views/lexicon/patterns/settings-panel/tab.html.twig
+++ b/views/lexicon/patterns/settings-panel/tab.html.twig
@@ -62,7 +62,7 @@
 
     <div class="settings-section settings-section--stacked">
 
-        {{ form.fieldset_start({ 'legend': 'Section heading' }) }}
+        {{ form.fieldset_start({ 'legend': 'heading/legend' }) }}
 
         {{
             form.text({
@@ -212,9 +212,6 @@
 {% endblock tab_settings %}
 
 {% block tab_content %}
-
-        <h2 class="content-heading">Page 1 - Your details</h2>
-
         {{
             form.text({
                 'id': 'guid-' ~ random(),
